superadmin & coach update

--- a/pages/coach/support_tickets.html
+++ b/pages/coach/support_tickets.html
@@ -55,10 +55,22 @@
                           <label
                             class="form-control form-check-label"
                             style="border: none; font-size: 1.125rem"
-                            ><strong>Support Tickets</strong>
-                          </label>
+                            ><strong>Support Tickets</strong></label
+                          >
+                          <div class="input-group-append">
+                            <button
+                              type="button"
+                              class="btn btnlightpurple btn-fw"
+                              style="
+                                padding: 10px 30px !important;
+                                border-radius: 25px !important;
+                                vertical-align: middle !important;
+                              "
+                            >
+                              Create New Tickets
+                            </button>
+                          </div>
                         </div>
-                        
                       </form>
                     </div>
                   </tr>
@@ -81,7 +93,7 @@
                                 <a href="your-file-path">Download</a>
                               </p>
                               <label for="info" class="card-label"
-                                >Sara Carol: saracarol@gmail.com</label
+                                >Mohan Mahanama: mahanama@gmail.com</label
                               >
                               <label for="date" class="card-label"
                                 >April 3, 2023
@@ -106,60 +118,7 @@
                                 <a href="your-file-path">Download</a>
                               </p>
                               <label for="info" class="card-label"
-                                >Sara Carol: saracarol@gmail.com</label
-                              >
-                              <label for="date" class="card-label"
-                                >April 3, 2023
-                              </label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card card-img-holder">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <img
-                                src="\assets/images/faces/support-ticket.png"
-                                class="me-2"
-                                alt="image"
-                              />
-                              <p class="card-label mt-4">
-                                Ticket #828792
-                                <a href="your-file-path">Download</a>
-                              </p>
-                              <label for="info" class="card-label"
-                                >Sara Carol: saracarol@gmail.com</label
-                              >
-                              <label for="date" class="card-label"
-                                >April 3, 2023
-                              </label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card card-img-holder">
-                        <div class="card-body">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <img
-                                src="\assets/images/faces/support-ticket.png"
-                                class="me-2"
-                                alt="image"
-                              />
-                              <p class="card-label mt-4">
-                                Ticket #828792
-                                <a href="your-file-path">Download</a>
-                              </p>
-                              <label for="info" class="card-label"
-                                >Sara Carol: saracarol@gmail.com</label
+                                >Mohan Mahanama: mahanama@gmail.com</label
                               >
                               <label for="date" class="card-label"
                                 >April 3, 2023
@@ -187,7 +146,7 @@
                                 <a href="your-file-path">Download</a>
                               </p>
                               <label for="info" class="card-label"
-                                >Sara Carol: saracarol@gmail.com</label
+                                >Mohan Mahanama: mahanama@gmail.com</label
                               >
                               <label for="date" class="card-label"
                                 >April 3, 2023
@@ -212,7 +171,60 @@
                                 <a href="your-file-path">Download</a>
                               </p>
                               <label for="info" class="card-label"
-                                >Sara Carol: saracarol@gmail.com</label
+                                >Mohan Mahanama: mahanama@gmail.com</label
+                              >
+                              <label for="date" class="card-label"
+                                >April 3, 2023
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card card-img-holder">
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-md-12">
+                              <img
+                                src="\assets/images/faces/support-ticket.png"
+                                class="me-2"
+                                alt="image"
+                              />
+                              <p class="card-label mt-4">
+                                Ticket #828792
+                                <a href="your-file-path">Download</a>
+                              </p>
+                              <label for="info" class="card-label"
+                                >Mohan Mahanama: mahanama@gmail.com</label
+                              >
+                              <label for="date" class="card-label"
+                                >April 3, 2023
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card card-img-holder">
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-md-12">
+                              <img
+                                src="\assets/images/faces/support-ticket.png"
+                                class="me-2"
+                                alt="image"
+                              />
+                              <p class="card-label mt-4">
+                                Ticket #828792
+                                <a href="your-file-path">Download</a>
+                              </p>
+                              <label for="info" class="card-label"
+                                >Mohan Mahanama: mahanama@gmail.com</label
                               >
                               <label for="date" class="card-label"
                                 >April 3, 2023
@@ -229,146 +241,73 @@
             <div class="col-md-4 grid-margin stretch-card mt-5">
               <div class="card" style="height: fit-content">
                 <div class="card-body">
-                  <h4 class="card-title">Completed Support Tickets</h4>
+                  <h4 class="card-title">Create a Ticket</h4>
+                  <form class="forms-sample">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control inputfieldform"
+                        id="program"
+                        placeholder="Your full name"
+                      />
+                    </div>
 
-                  <div class="form-group">
-                    <div class="row">
-                      <!-- <div class="table-responsive"> -->
-                        <table class="table">
-                          <tbody>
-                            <tr>
-                              <td class="card-label">
-                                <img
-                                  src="\assets/images/faces/support-ticket.png"
-                                  class="me-3"
-                                  alt="image"
-                                />Ticket #828792
-                                <button
-                                  type="button"
-                                  class="btn1 btn-gradient-primary btn-rounded btn-fw ms-4"
-                                >
-                                  View
-                                </button>
-                              </td>
-                            </tr>
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control inputfieldform"
+                        id="program"
+                        placeholder="Email"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control inputfieldform"
+                        id="program"
+                        placeholder="Your enquiry"
+                      />
+                    </div>
 
-                            <tr>
-                              <td class="card-label">
-                                <img
-                                  src="\assets/images/faces/support-ticket.png"
-                                  class="me-3"
-                                  alt="image"
-                                />Ticket #828792
-                                <button
-                                  type="button"
-                                  class="btn1 btn-gradient-primary btn-rounded btn-fw ms-4"
-                                >
-                                  View
-                                </button>
-                              </td>
-                            </tr>
-
-                            <tr>
-                              <td class="card-label">
-                                <img
-                                  src="\assets/images/faces/support-ticket.png"
-                                  class="me-3"
-                                  alt="image"
-                                />Ticket #828792
-                                <button
-                                  type="button"
-                                  class="btn1 btn-gradient-primary btn-rounded btn-fw ms-4"
-                                >
-                                  View
-                                </button>
-                              </td>
-                            </tr>
-
-                            <tr>
-                              <td class="card-label">
-                                <img
-                                  src="\assets/images/faces/support-ticket.png"
-                                  class="me-3"
-                                  alt="image"
-                                />Ticket #828792
-                                <button
-                                  type="button"
-                                  class="btn1 btn-gradient-primary btn-rounded btn-fw ms-4"
-                                >
-                                  View
-                                </button>
-                              </td>
-                            </tr>
-
-                            <tr>
-                              <td class="card-label">
-                                <img
-                                  src="\assets/images/faces/support-ticket.png"
-                                  class="me-3"
-                                  alt="image"
-                                />Ticket #828792
-                                <button
-                                  type="button"
-                                  class="btn1 btn-gradient-primary btn-rounded btn-fw ms-4"
-                                >
-                                  View
-                                </button>
-                              </td>
-                            </tr>
-
-                            <tr>
-                              <td class="card-label">
-                                <img
-                                  src="\assets/images/faces/support-ticket.png"
-                                  class="me-3"
-                                  alt="image"
-                                />Ticket #828792
-                                <button
-                                  type="button"
-                                  class="btn1 btn-gradient-primary btn-rounded btn-fw ms-4"
-                                >
-                                  View
-                                </button>
-                              </td>
-                            </tr>
-
-                            <tr>
-                              <td class="card-label">
-                                <img
-                                  src="\assets/images/faces/support-ticket.png"
-                                  class="me-3"
-                                  alt="image"
-                                />Ticket #828792
-                                <button
-                                  type="button"
-                                  class="btn1 btn-gradient-primary btn-rounded btn-fw ms-4"
-                                >
-                                  View
-                                </button>
-                              </td>
-                            </tr>
-
-                            <tr>
-                              <td class="card-label">
-                                <img
-                                  src="\assets/images/faces/support-ticket.png"
-                                  class="me-3"
-                                  alt="image"
-                                />Ticket #828792
-                                <button
-                                  type="button"
-                                  class="btn1 btn-gradient-primary btn-rounded btn-fw ms-4"
-                                >
-                                  View
-                                </button>
-                              </td>
-                            </tr>
-
-                          </tbody>
-                        </table>
+                    <div class="form-group">
+                      <input
+                        type="file"
+                        name="img[]"
+                        class="file-upload-default"
+                        id="fileInput"
+                      />
+                      <div class="input-group col-xs-12">
+                        <input
+                          type="text"
+                          class="form-control file-upload-info"
+                          disabled
+                          placeholder="Media"
+                          style="
+                            padding: 12px 30px !important;
+                            border-radius: 25px !important;
+                            border: none;
+                          "
+                        />
+                        <span class="input-group-append">
+                          <button
+                            class="file-upload-browse btn1 btn-gradient-primary"
+                            type="button"
+                            onclick="$('#fileInput').click();"
+                          >
+                            Browse
+                          </button>
+                        </span>
                       </div>
                     </div>
-                  </div>
+
+                    <button
+                      type="submit"
+                      class="btn1 btn-gradient-primary me-2"
+                      style="width: 100%; border-radius: 25px"
+                    >
+                      Save
+                    </button>
+                  </form>
                 </div>
               </div>
             </div>
