--- a/pages/super-admin/messenger.html
+++ b/pages/super-admin/messenger.html
@@ -20,10 +20,10 @@
     <script src="../../assets/js/jquery-3.3.1.min.js"></script>
     <script> 
       $(function(){
-        $("#baseHeader").load("../../base-header.html"); 
+        $("#baseHeader").load("base-header.html"); 
       });
       $(function(){
-        $("#sidebar").load("../../sidebar.html"); 
+        $("#sidebar").load("sidebar.html"); 
       });
   </script>
   </head>
